# aftr

./: .dockerignore  .npmignore  Dockerfile  README.md  package-lock.json  package.json
.github/workflows/: docker.yml
controller/: package.json
controller/src/: aeClient.js  agentHub.js  commands.js  mcp.js  mcpServer.js  protocol.js  server.js
controller/src/orchestrator/: agentClient.js
controller/test/: mcp.test.js
docs/: TEAM-GUIDE.md
packaging/pip/: README.md  pyproject.toml
packaging/pip/aftr_cli/: __init__.py
shared/: package.json
shared/src/: config.js
shared/test/: commands.test.js  protocol.test.js
simulator/: package.json
simulator/src/: index.js
